fixs logo footer + herosection mobile + p agence

--- a/css/agence.css
+++ b/css/agence.css
@@ -26,7 +26,9 @@
     text-align: right;
     margin-top: 0;
 }
-
+.container p {
+    margin: 0;
+}
 .vertical-line {
     width: 65%;
     height: 1px;
