--- a/css/header.css
+++ b/css/header.css
@@ -1,12 +1,7 @@
 /* HEADER */
 
-header {
-    background-color: var(--secondary-color);
-}
-
 #header-herosection {
     height: 100vh;
-    background-color: coral;
 }
 
 #navbar {
@@ -126,4 +121,5 @@ header {
     font-size: 20px;
     text-align: center;
     color: var(--primary-color);
+    font-weight: 600;
 }
